CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.16

	- The web interface now enforces constraints in PPD
	  files when configuring a printer.
	- When stopping a printer, the scheduler didn't set the
	  printer state before stopping the current job.
	- The cupsaddsmb utility now lists all data files for
	  Win9x and WinMe clients when installing that Windows
	  driver.
	- Jobs submitted to a class now bounce immediately to
	  the next available printer rather than waiting until
	  that printer is available.
	- Filters and backends now also get the CLASS
	  environment variable set when a job is printed to a
	  printer class instead of a normal printer.
	- Added French translations of the web interface, CUPS
	  Overview, Software Administrators Manual, and Software
	  Users Manual contributed by Marian REYT-LLABRES.
	- Added several "hint" messages for common configuration
	  problems that are stored in the error_log file.
	- httpSeparate() now unquotes %xx characters in the
	  username:password field of a URI.
	- When starting the scheduler in daemon mode, the parent
	  process now waits for the child to signal it is ready
	  to accept connections.
	- Added -F option to cupsd to run cupsd in the
	  foreground but detach from the controlling terminal
	  and current directory.
	- The scheduler did not reload jobs when receiving a HUP
	  signal; this would cause problems since the pointers
	  into the file type database would no longer be valid
	  for existing jobs.
	- The scheduler did not save the network interface list
	  update time, thus no caching of the network data was
	  actually provided.
	- Updated the SuSE PAM configuration file.
	- The LPD backend now supports a "reserve" option and no
	  longer reserves a priviledged port by default.
	- The cupsaddsmb command now continues past printers
	  that do not have a PPD file to export.
	- The lpstat command didn't treat printer names as
	  case-insensitive.